Some minor fixes to the manuscript

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -231,7 +231,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     % All of the above methods for estimating the variance of $\lambda_{ij}$ include the number of samples $n$. This means that where the number of samples $n$ is very low (e.g., for rare species), there will be considerable uncertainty around our estimate of $\lambda_{ij}$. In Fig.~\ref{upper_limits}, we derive the Clopper-Pearson interval to explore how the estimate of $\lambda_{ij}$ (for true $\lambda=0$) varies with sample size. At a small sample size, the 95\% confidence interval is nearly (0, 1). To establish that species are not interacting with any acceptable certainty requires tens of observations of the two species co-occurring but not interacting. Most data sets will lack such extensive sampling across all species pairs, but we can still use a Bayesian approach to supplement the available data with other sources of information.
 
-    The basis of a Bayesian approach to modelling the probability that an interaction between species $i$ and $j$ occurs ($\lambda_{ij}$) is combining the maximum likelihood estimate (MLE) of $\lambda_{ij}$ with a prior distribution (described in the next section) and a normalising function. The MLE of $\lambda_{ij}$ can be computed from the number of observed interactions $k_ij$ and observed co-occurrences $n_{ij}$: $\lambda_{ij}=\frac{k_{ij}}{n_{ij}}$. The most appropriate prior distribution for $\lambda_{ij}$ is the beta distribution:
+    The basis of a Bayesian approach to modelling the probability that an interaction between species $i$ and $j$ occurs ($\lambda_{ij}$) is combining the maximum likelihood estimate (MLE) of $\lambda_{ij}$ with a prior distribution (described in the next section) and a normalising function. The MLE of $\lambda_{ij}$ can be computed from the number of observed interactions $k_{ij}$ and observed co-occurrences $n_{ij}$: $\lambda_{ij}=\frac{k_{ij}}{n_{ij}}$. The most appropriate prior distribution for $\lambda_{ij}$ is the beta distribution:
 
 
     \begin{equation}
@@ -344,7 +344,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   In the \emph{Salix}-based food webs sampled by~\citet{Kopelke2017}, most pairs of gallers and natural enemies (9,794/12,096) never co-occurred and, for species that did occur together, the total number of co-occurrences was generally low (mean=3.87, median=2; Fig.~\ref{histograms}A). The bulk (92.24\%) of these co-occurring species pairs were never observed interacting. Of those pairs that did interact, the incidence of interaction was also low (mean=4.04, median=2; Fig.~\ref{histograms}B) and was lower than the number of observed co-occurrences (Fig.~\ref{histograms}C).
 
 
-  We obtained prior parameters of $\alpha_{ij}$=0.700, $\beta_{ij}$=8.49, giving a beta distribution strongly skewed towards 0. Where $n=0$, these parameters gave a posterior distribution with $\bar\lambda$=0.076, var($\lambda_{ij}$)=0.008. When $n=374$, we obtained a posterior distribution with $\bar\lambda_{ij}$=1.83 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=4.76$\times10^6$. This distributions is very close to 0 with small variance about $\lambda_{ij}$; if species $i$ and $j$ co-occurred 374 times without interacting, they are extremely unlikely to do so at other sites or times. 
+  We obtained prior parameters of $\alpha_{ij}$=0.700, $\beta_{ij}$=8.49, giving a beta distribution strongly skewed towards 0. Where $n=0$, these parameters gave a posterior distribution with $\bar\lambda_{ij}$=0.076, var($\lambda_{ij}$)=0.008. When $n=374$, we obtained a posterior distribution with $\bar\lambda_{ij}$=1.83 $\times$ 10$^{-3}$, var($\lambda_{ij}$)=4.76$\times10^6$. This distribution is very close to 0 with small variance about $\lambda_{ij}$; if species $i$ and $j$ co-occurred 374 times without interacting, they are extremely unlikely to do so at other sites or times. 
 
 
   For most pairs of species $i$ and $j$, $n_{ij}$ was much less than 374 and our posterior mean and variance therefore retain more of the influence of the prior. We can see this in the increasing means and variances as we decrease $n_{ij}$ (Fig.~\ref{Salix_pdfs_cdfs};~\emph{Appendix S11}). To be 95\% confident that the probability of interaction is below 0.1, 0.05, or 0.01 would require 15, 39, and 229 observed co-occurrences, respectively. Note that these are relatively large sample sizes compared to currently-available empirical networks (e.g.,~\citealp{Morris2014}).
