--- a/manuscript/reply_to_reviewers.tex
+++ b/manuscript/reply_to_reviewers.tex
@@ -151,7 +151,7 @@
 		\end{refquote}
 
 
-		\textbf{R:} We thank the Reviewer for the literature suggestions and now include them in our introduction and/or discussion. We emphasise the board applicability of our approach across network types and systems with varying degrees of prior knowledge. We also emphasise that our approach is not restricted to species observed X times (as many predictive models are) and can include species not yet observed at a site (e.g., potential invaders). Finally, we note that there is a need to synthesise the literature on sampling issues and formalise the sources of uncertainty affecting the estimation of pairwise interactions. There are, as the Reviewer notes, already a number of publications addressing probabilistic interactions, but none of them adequately characterise uncertainty about interactions. We hope that the contribution our manuscript makes is now clearer.
+		\textbf{R:} We thank the Reviewer for the literature suggestions and now include them in our introduction and/or discussion. We emphasise the broad applicability of our approach across network types and systems with varying degrees of prior knowledge. We also emphasise that our approach is not restricted to species observed X times (as many predictive models are) and can include species not yet observed at a site (e.g., potential invaders). Finally, we note that there is a need to synthesise the literature on sampling issues and formalise the sources of uncertainty affecting the estimation of pairwise interactions. There are, as the Reviewer notes, already a number of publications addressing probabilistic interactions, but none of them adequately characterise uncertainty about interactions. We hope that the contribution our manuscript makes is now clearer.
 
 
 	6. Potential contradiction 
@@ -409,7 +409,7 @@
 	15. What does higher nestedness in the observed networks mean? How is it possible? 
 
 
-		\textbf{R:} Nestedness being higher in the observed networks simply means that the additional interactions predicted by our model tend not to be between generalists and specialists and, as such, do not contribute strongly to nestedness. This is actually somewhat intuitive - ``specialists'' in the observed data are exactly those species for which we are most likely to be missing interactions, and interactions between specialists and the most likely to be predicted to occur but not have been observed. Due to the tight word limit, we do not have space to discuss this extensively in the manuscript but have added brief interpretations in the results.
+		\textbf{R:} Nestedness being higher in the observed networks simply means that the additional interactions predicted by our model tend not to be between generalists and specialists and, as such, do not contribute strongly to nestedness. This is actually somewhat intuitive - ``specialists'' in the observed data are exactly those species for which we are most likely to be missing interactions, and interactions between specialists are the most likely to be predicted to occur but not have been observed. Due to the tight word limit, we do not have space to discuss this extensively in the manuscript but have added brief interpretations in the results.
 
 
 		Appendix S10:
@@ -664,7 +664,7 @@
 		\end{refquote}
 
 
-		\textbf{R:} The filtering was intended to show how uncertainty likely warps our current understanding of network properties like connectance. If we do not observe 20-50\% of the interactions in a network, then many network properties in the published literature will be inaccurate. Even worse, networks compiled under different levels of uncertainty (e.g., species with more or less variable traits, or studies with multiple sampling methods versus only one) or with different sampling efforts will have network structure metrics that are inaccurate to different degrees. Filtering networks in the way that we do could give an idea of how many networks are missing, but we do not think it is necessary to evaluate uncertainty (we believe that examining the posterior distributions directly is a better approach there). Due to length restrictions, we have moved this analysis to an appendix (\emph{Appendix S10}) and have rephrased these lines to emphasise that the filtered networks are intended to demonstrate the consequences of uncertainty more than anything else.
+		\textbf{R:} The filtering was intended to show how uncertainty likely warps our current understanding of network properties like connectance. If we do not observe 20-50\% of the interactions in a network, then many network properties in the published literature will be inaccurate. Even worse, networks compiled under different levels of uncertainty (e.g., species with more or less variable traits, or studies with multiple sampling methods versus only one) or with different sampling efforts will have network structure metrics that are inaccurate to different degrees. Filtering networks in the way that we do could give an idea of how many interactions are missing, but we do not think it is necessary to evaluate uncertainty (we believe that examining the posterior distributions directly is a better approach there). Due to length restrictions, we have moved this analysis to an appendix (\emph{Appendix S10}) and have rephrased these lines to emphasise that the filtered networks are intended to demonstrate the consequences of uncertainty more than anything else.
 
 
 		\begin{quotation}
@@ -808,7 +808,7 @@
 		\end{refquote}
 
 
-		\textbf{R:} In the case study, we are modelling L (the probability that an interaction is feasible). We do not have quantitative data within sites in our dataset, so we cannot isolate the probability of detecting an interaction at a site from the probability that the interaction occurs. This is also the probability we were most interested in. We do note, however, that one could also model X|L using the same framework if there were independent counts of co-occurrences and interactions within a single site. \citet{Gravel2018} does just this. We now state throughout the manuscript that we are interested in compiling the metaweb, the set of interaction which can feasibly occur. We hope that our goal is now crystal clear.
+		\textbf{R:} In the case study, we are modelling L (the probability that an interaction is feasible). We do not have quantitative data within sites in our dataset, so we cannot isolate the probability of detecting an interaction at a site from the probability that the interaction occurs. This is also the probability we were most interested in. We do note, however, that one could also model X|L using the same framework if there were independent counts of co-occurrences and interactions within a single site. \citet{Gravel2018} does just this. We now state throughout the manuscript that we are interested in compiling the metaweb, the set of interactions which can feasibly occur. We hope that our goal is now crystal clear.
 
 
 	9. Misunderstanding of how biased sampling does not solve problems of uncertainty
