added Tomas changes

--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -190,12 +190,12 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
         \subsubsection*{Did we observe the interaction?} 
 
-          Lastly, measurement errors are a pervasive source of uncertainty about ecological processes. Even a feasible interaction which occurs during sampling ($L_{ij}=1$, $X_{ij}=1$) may still go undetected~\citep{Jordano2016,Weinstein2017}. We can define the probability of detecting of an interaction, $D_{ij}$, given the interaction is feasible and occurs, as a stochastic process with  probability $P(D_{ij}|X_{ij}=1,L_{ij}=1)=\delta_{ij}$. Note that $D_{ij}$ is a stochastic variable where $D_{ij}=1$ if the interaction observed and $D_{ij}=0$ otherwise, while $P(D_{ij})$ is a continuous probability. Detection failure could happen for many reasons~\citep{Wirta2014}. Some sources of detection failure can be minimised (e.g., by combining multiple sampling methods~\citet{Wirta2014,Jordano2016}), but other sources are difficult to reduce. For example, it may not be possible to sample some species directly due to conservation concerns~\citep{Lagrue2015}. The probability of detecting an interaction also depends on the duration of the interaction and its evidence, the species involved, and the individuals sampled~\citep{Wells2013,Lagrue2015,Cirtwill2016,Weinstein2017}. As sampling improves $D_{ij}$ should tend towards 1 but, importantly, $D_{ij}$ will vary between interactions it is very likely that some $D_{ij}<1$. For example, when analysing gut contents interactions involving prey with hard parts will be more detectable than interactions with quickly-digested, soft prey.
+          Lastly, measurement errors are a pervasive source of uncertainty about ecological processes. Even a feasible interaction which occurs during sampling ($L_{ij}=1$, $X_{ij}=1$) may still go undetected~\citep{Jordano2016,Weinstein2017}. We can define the probability of detecting of an interaction, $D_{ij}$, given the interaction is feasible and occurs, as a stochastic process with  probability $P(D_{ij}|X_{ij}=1,L_{ij}=1)=\delta_{ij}$. Note that $D_{ij}$ is a stochastic variable where $D_{ij}=1$ if the interaction observed and $D_{ij}=0$ otherwise, while $P(D_{ij})$ is a continuous probability. Detection failure could happen for many reasons~\citep{Wirta2014}. Some sources of detection failure can be minimised (e.g., by combining multiple sampling methods~\citep{Wirta2014,Jordano2016}), but other sources are difficult to reduce. For example, it may not be possible to sample some species directly due to conservation concerns~\citep{Lagrue2015}. The probability of detecting an interaction also depends on the duration of the interaction and its evidence, the species involved, and the individuals sampled~\citep{Wells2013,Lagrue2015,Cirtwill2016,Weinstein2017}. As sampling improves $D_{ij}$ should tend towards 1 but, importantly, $D_{ij}$ will vary between interactions and it is very likely that some $D_{ij}<1$. For example, when analysing gut contents interactions involving prey with hard parts will be more detectable than interactions with quickly-digested, soft prey~\citep{Alberdi2018}.
 
 
     % \subsection*{Can't we just sample more?}
 
-    In summary, an unobserved could be unfeasible [$P(L_{ij})=0$], be feasible but not occur during sampling ($P(X_{ij}|L_{ij}=1)=0$], or be feasible and occur during sampling but not be observed [$P(D_{ij}|X_{ij}=1,L_{ij}=1)=0$]. Researchers might be interested in identifying feasible interactions (i.e., reducing uncertainty about $\lambda_{ij}$) or identifying feasible interactions that occurred locally (i.e., reducing uncertainty about $\chi_{ij}$). Here we consider the former problem while noting that uncertainty about both $\chi_{ij}$ and $\delta_{ij}$ contribute to uncertainty about $\lambda_{ij}$. Future sampling should aim to characterise all three probabilities, as is possible in some studies focused on local realisations of a metaweb (e.g.,~\citet{Graham2018,Gravel2018}), but for now it is often difficult to distinguish between them.
+    In summary, an unobserved interaction could be unfeasible [$P(L_{ij})=0$], be feasible but not occur during sampling ($P(X_{ij}|L_{ij}=1)=0$], or be feasible and occur during sampling but not be observed [$P(D_{ij}|X_{ij}=1,L_{ij}=1)=0$]. Researchers might be interested in identifying feasible interactions (i.e., reducing uncertainty about $\lambda_{ij}$) or identifying feasible interactions that occurred locally (i.e., reducing uncertainty about $\chi_{ij}$). Here we consider the former problem while noting that uncertainty about both $\chi_{ij}$ and $\delta_{ij}$ contribute to uncertainty about $\lambda_{ij}$. Future sampling should aim to characterise all three probabilities, as is possible in some studies focused on local realisations of a metaweb (e.g.,~\citet{Graham2018,Gravel2018}), but for now it is often difficult to distinguish between them.
     %One reason for this is the effect of factors such as abundance  on multiple levels of uncertainty. Rare species are less likely to interact at a given site due to neutral processes~\citep{Jordano2016,Graham2018} and interactions involving rare species are less likely to be detected~\citep{Bartomeus2013,Jordano2016}. Thus, abundance affects both $P(X_{ij})$ and $P(D_{ij})$. 
 
 
@@ -205,7 +205,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
     One obvious way to reduce uncertainty is to increase sampling. High sample sizes will reduce uncertainty about the upper bound of $\lambda_{ij}$ and increase the probability of detecting unlikely or cryptic interactions (where $L_{ij}=1$ but $\chi_{ij}$ or $\delta_{ij}$ is low). In some systems, targeted sampling of particular species pairs could reduce especially high uncertainties about $\lambda_{ij}$, but this will not be possible everywhere (e.g., in host-parasitoid systems where parasitoid identities are unknown during sample collection). High-quality sampling is crucial in studies of empirical networks, but there are limits to the ability of sampling to reduce uncertainty (\emph{Appendix S2, Fig. S2}). As a complement to improved sampling, we can also reduce uncertainty by leveraging prior knowledge about the system using a Bayesian approach, as detailed below.
 
 
-\section*{Materials and methods}
+\section*{Approach}
 
   \subsection*{A Bayesian framework for interaction probabilities}
 
@@ -303,13 +303,13 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
         \end{equation}
   
 
-        Note that, in this case, the prior distribution will be the same for all interaction probabilities. It is also possible to interpret other network properties (e.g., species degrees) in a similar network(s) as interaction probabilities and use these to create a prior (worked example in \emph{Appendix S4}). When using network summary statistics or degree distributions, it is important to consider whether the available information reflects what we believe about the network. Given the likelihood that most published networks are undersampled~\citep{Jordano2016}, it may be wise to include only the highest-quality networks available in a prior. Likewise, only the degree distribution for a similar system is likely to be a reasonable prior for a focal system. For example, if the focal system is large and contains a diverse array of species, it would be inappropriate to use a prior distribution drawn from a small network describing closely-related taxa (demonstrated in \emph{Appendix S7}). Similarly, highly-aggregated networks containing nodes which represent whole classes or families are likely to have very different structures than networks where most nodes represent single species as aggregated nodes are likely to have more interaction partners than single species.
+        Note that, in this case, the prior distribution will be the same for all interaction probabilities. It is also possible to interpret other network properties (e.g., species degrees) in a similar network(s) as interaction probabilities and use these to create a prior (worked example in \emph{Appendix S4}). When using network summary statistics or degree distributions, it is important to consider whether the available information reflects what we believe about the network. Given the likelihood that most published networks are undersampled~\citep{Jordano2016}, it may be wise to include only the highest-quality networks available in a prior. Likewise, only the degree distribution for a similar system is likely to be a reasonable prior for a focal system. For example, if the focal system is large and contains a diverse array of species, it would be inappropriate to use a prior distribution drawn from a small network describing closely-related taxa (demonstrated in \emph{Appendix S7}). Similarly, data from a network where nodes are resolved to different taxonomic levels than the focal network are likely to have quite different properties and would not be an appropriate prior.
 
 
         If a similar dataset is not available, it is also possible to use data from the study at hand to develop a prior (i.e., ``approximate Bayes"~\citet{Gelmanblog})~\citep{Spiegelhalter2000}. This approach is used in medical testing~\citep{Spiegelhalter2000} and disease modelling~\citep{Leyland2005} using information from pilot studies and can easily be applied to ecological systems. Returning to the example of degree distributions, approximate Bayes allows us to use information from abundant and easily-sampled species to predict interaction probabilities for species which were observed only rarely. Despite its practicality, approximate Bayes has been criticised for being overly subjective~\citep{Berger2006} and because estimating hyperparameters from data serves as an approximation of some true hyperparameters which remain unknown~\citep{Gelmanblog}. We therefore encourage researchers to carefully consider whether external data or an appropriate trait model is available before opting for a prior based on some of their own data. Nevertheless, there are likely to be many situations where approximate Bayes provides the best way to describe the uncertainty in the dataset. We therefore illustrate this approach in the following empirical example.
 
 
-  \subsection*{An empirical example}
+  \section*{An empirical example}
 
       To illustrate the process of constructing a Bayesian network to quantify uncertainty about interactions, we use the comprehensively-sampled system of willows (\emph{Salix}), herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}. This dataset consists of a single community type sampled across Europe over 29 years and at 374 unique locations. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes (\emph{Appendix S5}). 
       The high spatiotemporal resolution of this dataset makes it ideal for illustrating the difficulties in completely sampling a network; even with such an unusually high sampling effort, there were many pairs of species which were rarely or never observed together and about which we therefore have high uncertainty about interaction probabilities (Fig.~\ref{histograms}). Using the Bayesian framework above, we can identify which potential interactions are more and less uncertain, allowing us to better predict the true structure of the metaweb. 
@@ -339,7 +339,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
     %   Measures of network structure which are based on empirical networks that are missing interactions may differ substantially from the values that would be obtained if detection certainty and variation in interactions over space and time could be removed. To demonstrate this, we created a suite of filtered networks for each posterior network. Taking a posterior network as the ``true" network, we randomly sampled 90\%, 80\%, 70\%, 60\%, 50\%, 40\%, 30\%, 20\%, and 10\% of the interactions to create a new ``filtered" network. This gradient is akin to a gradient of uncertainty in the network (e.g., due to varying sampling effort or intraspecific trait variability). For each level of uncertainty, we created 100 randomly-sampled networks per posterior-probability network (giving 100 posterior networks and 1000 filtered networks). We calculated the same network properties as described above for all posterior and filtered networks.
 
 
-\section*{Results}
+\subsection*{Empirical results}
 
   In the \emph{Salix}-based food webs sampled by~\citet{Kopelke2017}, most pairs of gallers and natural enemies (9,794/12,096) never co-occurred and, for species that did occur together, the total number of co-occurrences was generally low (mean=3.87, median=2; Fig.~\ref{histograms}A). The bulk (92.24\%) of these co-occurring species pairs were never observed interacting. Of those pairs that did interact, the incidence of interaction was also low (mean=4.04, median=2; Fig.~\ref{histograms}B) and was lower than the number of observed co-occurrences (Fig.~\ref{histograms}C).
 
@@ -406,7 +406,7 @@ All data used in this study have been independently published and are accessible
 
 
   \begin{figure}[h!]
-      \caption{Despite the replication in our empirical dataset, most galler-natural enemy pairs were never observed co-occurring and those that co-occurred rarely interacted. \textbf{A)} Histogram of the number of pairs of species observed co-occurring at least once. 9794 galler-enemy pairs were never observed co-occurring (not shown).
+      \caption{Despite the high replication in our empirical dataset, most galler-natural enemy pairs were never observed co-occurring and those that co-occurred rarely interacted. \textbf{A)} Histogram of the number of pairs of species observed co-occurring at least once. 9794 galler-enemy pairs were never observed co-occurring (not shown).
       \textbf{B)} Histogram of the number of observed interactions between co-occurring species. Species which co-occurred but never interacted are included. 
       \textbf{C)} For each species pair, the number of observed interactions plotted against the number of observed co-occurrences. The red, dashed line indicates a 1:1 relationship.}
       \label{histograms}
